objects/adapps__OptimizerPlus_Lig_Comp_Record_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__FlexiPage__c</fullName>
        <label>FlexiPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Lightning_Component_Record__c</fullName>
        <label>Lightning Components on Record Lightn..</label>
        <referenceTo>adapps__OptimizerPlus_Lig_Comp_Record__c</referenceTo>
        <relationshipLabel>Lightning Component Record Items</relationshipLabel>
        <relationshipName>Lightning_Component_Record_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Lightning Component Record Item</label>
    <nameField>
        <label>Lightning Component Record Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Component Record Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>